# http-lambda-cdk

./: .gitignore  .npmignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
examples/nodejs-example/app/: build.sh  index.ts  package-lock.json  package.json  tsconfig.json
examples/nodejs-example/cdk/: cdk.json  package.json
examples/nodejs-example/cdk/lib/: NodejsHttpStack.ts
examples/rust-example/: README.md
examples/rust-example/app/: Cargo.toml  build.sh  setup.sh
examples/rust-example/app/src/: main.rs
examples/rust-example/cdk/: package-lock.json  package.json
examples/rust-example/cdk/lib/: RustHttpStack.ts
lib/: index.ts
test/: http-lambda.test.ts
